fix react infinite loop issue

--- a/playwright-report/data/558f5c0d9d40bdc1228213cf112c604c96698d6b.md
+++ b/playwright-report/data/558f5c0d9d40bdc1228213cf112c604c96698d6b.md
@@ -1,21 +1,148 @@
 # Test info
 
-- Name: Intelligent Measure Placement >> debugging test - add just a few notes and inspect state
-- Location: /Users/gizmo/strumstick-tab-viewer/tests/measure-placement.spec.ts:284:3
+- Name: Intelligent Measure Placement >> should add eighth notes and create proper measure boundaries with visual spacing
+- Location: /Users/gizmo/strumstick-tab-viewer/tests/measure-placement.spec.ts:24:3
 
 # Error details
 
 ```
-Error: locator.textContent: Test timeout of 15000ms exceeded.
+Error: page.screenshot: Test timeout of 30000ms exceeded.
 Call log:
-  - waiting for locator('button').nth(7)
+  - taking page screenshot
+  - waiting for fonts to load...
+  - fonts loaded
 
-    at /Users/gizmo/strumstick-tab-viewer/tests/measure-placement.spec.ts:297:44
+    at /Users/gizmo/strumstick-tab-viewer/tests/measure-placement.spec.ts:249:16
+```
+
+# Page snapshot
+
+```yaml
+- banner:
+  - text: File
+  - button "📄 New"
+  - button "📁 Open"
+  - button "💾 Save*"
+  - button "💾 Save As..."
+  - text: Edit
+  - button "↶ Undo"
+  - button "↷ Redo"
+  - button "✂️ Cut"
+  - button "📋 Copy"
+  - button "📄 Paste"
+  - text: "Notes Duration:"
+  - button "Whole Note":
+    - img "Whole note"
+  - button "Whole Rest": 𝄻
+  - button "Half Note":
+    - img "Half note"
+  - button "Half Rest": 𝄼
+  - button "Quarter Note":
+    - img "Quarter note"
+  - button "Quarter Rest": 𝄽
+  - button "Eighth Note":
+    - img "Eighth note"
+  - button "Eighth Rest": 𝄾
+  - button "Sixteenth Note":
+    - img "Sixteenth note"
+  - button "Sixteenth Rest": 𝄿
+  - button "Tie":
+    - img
+    - text: Tie
+  - button "♪ Dotted" [disabled]
+  - button "📏 Measure"
+  - text: "Time Time:"
+  - combobox "Time Signature":
+    - option "4/4" [selected]
+    - option "3/4"
+    - option "2/4"
+    - option "6/8"
+    - option "12/8"
+    - option "2/2"
+  - text: "4/4 Tempo:"
+  - button "−"
+  - text: 120 BPM
+  - button "+"
+  - text: Layout
+  - button "🔍 Zoom In"
+  - button "🔍 Zoom Out"
+  - button "↔️ Fit Width"
+- main:
+  - button "🔊"
+  - button "🎵"
+  - img: d A D 0 0 0 0 0 0 0 0 0 0 0 0
+- img "Fretboard"
+- img
+- contentinfo:
+  - button "Play":
+    - img
+  - text: Untitled Song 0:00 / 0:01
+  - button "Toggle count-in":
+    - img "Metronome"
+  - button "Decrease tempo":
+    - img
+  - text: 120 BPM
+  - button "Increase tempo":
+    - img
+  - button "Toggle loop":
+    - img
+    - text: Loop
+  - button "Toggle fretboard":
+    - img
+    - text: Fretboard
 ```
 
 # Test source
 
 ```ts
+  149 |     
+  150 |     console.log('Visual positions by slot:');
+  151 |     visualPositions.forEach(pos => {
+  152 |       console.log(`  Slot ${pos.slot}: X=${pos.x.toFixed(1)} (${pos.type})`);
+  153 |     });
+  154 |     
+  155 |     // Analyze spacing around measure lines
+  156 |     const measureLineSlots = visualPositions.filter(p => p.type === 'measure').map(p => p.slot);
+  157 |     if (measureLineSlots.length > 0) {
+  158 |       const measureSlot = measureLineSlots[0];
+  159 |       const measureX = visualPositions.find(p => p.slot === measureSlot && p.type === 'measure')?.x;
+  160 |       
+  161 |       // Find notes before and after the measure line
+  162 |       const noteBefore = visualPositions.filter(p => p.type === 'note' && p.slot < measureSlot).pop();
+  163 |       const noteAfter = visualPositions.find(p => p.type === 'note' && p.slot > measureSlot);
+  164 |       
+  165 |       if (noteBefore && noteAfter && measureX !== undefined) {
+  166 |         const beforeSpacing = measureX - noteBefore.x;
+  167 |         const afterSpacing = noteAfter.x - measureX;
+  168 |         
+  169 |         console.log(`\nSpacing Analysis around measure line at slot ${measureSlot}:`);
+  170 |         console.log(`  Note before (slot ${noteBefore.slot}): X=${noteBefore.x.toFixed(1)}`);
+  171 |         console.log(`  Measure line: X=${measureX.toFixed(1)}`);
+  172 |         console.log(`  Note after (slot ${noteAfter.slot}): X=${noteAfter.x.toFixed(1)}`);
+  173 |         console.log(`  Space before measure: ${beforeSpacing.toFixed(1)}px`);
+  174 |         console.log(`  Space after measure: ${afterSpacing.toFixed(1)}px`);
+  175 |         
+  176 |         // Check if there's proper visual spacing after the measure line
+  177 |         if (afterSpacing > beforeSpacing * 1.5) {
+  178 |           console.log('✅ Visual spacing detected: [E-|-*-] pattern');
+  179 |         } else if (afterSpacing < beforeSpacing * 0.5) {
+  180 |           console.log('❌ No visual spacing: [E-|*-] pattern (notes too close to measure line)');
+  181 |         } else {
+  182 |           console.log('⚠️ Minimal visual spacing: between [E-|*-] and [E-|-*-]');
+  183 |         }
+  184 |         
+  185 |         // Calculate expected positions based on slot spacing
+  186 |         const expectedSlotSpacing = (noteAfter.x - noteBefore.x) / (noteAfter.slot - noteBefore.slot);
+  187 |         console.log(`  Expected slot spacing: ${expectedSlotSpacing.toFixed(1)}px per slot`);
+  188 |         
+  189 |         // For intelligent measure placement, notes after the measure line should be shifted by exactly 1 slot
+  190 |         const expectedNoteAfterX = measureX + (noteAfter.slot - measureSlot) * expectedSlotSpacing + expectedSlotSpacing; // +1 slot shift
+  191 |         const actualOffset = noteAfter.x - (measureX + (noteAfter.slot - measureSlot) * expectedSlotSpacing); // offset from normal position
+  192 |         console.log(`  Expected note after X (with 1-slot shift): ${expectedNoteAfterX.toFixed(1)}`);
+  193 |         console.log(`  Actual note after X: ${noteAfter.x.toFixed(1)}`);
+  194 |         console.log(`  Visual offset applied: ${actualOffset.toFixed(1)}px (should be ${expectedSlotSpacing.toFixed(1)}px for 1-slot shift)`);
+  195 |         
+  196 |         // Check if the offset is exactly 1 slot width (within small tolerance)
   197 |         const tolerance = expectedSlotSpacing * 0.1; // 10% tolerance
   198 |         const desiredOffset = expectedSlotSpacing; // Exactly 1 slot width
   199 |         
@@ -68,7 +195,8 @@ Call log:
   246 |     }
   247 |
   248 |     // Take a final screenshot
-  249 |     await page.screenshot({ path: 'tests/screenshots/eighth-note-measure-placement.png', fullPage: true });
+> 249 |     await page.screenshot({ path: 'tests/screenshots/eighth-note-measure-placement.png', fullPage: true });
+      |                ^ Error: page.screenshot: Test timeout of 30000ms exceeded.
   250 |     
   251 |     console.log('✅ Test completed - screenshots saved');
   252 |     
@@ -116,8 +244,7 @@ Call log:
   294 |     console.log(`Found ${buttonCount} buttons total`);
   295 |     
   296 |     for (let i = 0; i < Math.min(buttonCount, 20); i++) {
-> 297 |       const text = await allButtons.nth(i).textContent();
-      |                                            ^ Error: locator.textContent: Test timeout of 15000ms exceeded.
+  297 |       const text = await allButtons.nth(i).textContent();
   298 |       console.log(`Button ${i}: "${text}"`);
   299 |     }
   300 |
@@ -170,10 +297,4 @@ Call log:
   347 |     }
   348 |
   349 |     // Check console messages
-  350 |     console.log('\n=== All console messages ===');
-  351 |     consoleMessages.forEach((msg, i) => console.log(`${i}: ${msg}`));
-  352 |
-  353 |     await page.screenshot({ path: 'tests/screenshots/debug-test.png', fullPage: true });
-  354 |   });
-  355 | }); 
 ```
